@@ -25,8 +25,6 @@ import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.util.*;
-import java.util.Set;
-import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
 public final class SellManager implements GuiManager.CustomGuiManager {
@@ -58,7 +56,6 @@ public final class SellManager implements GuiManager.CustomGuiManager {
         if (!file.exists()) plugin.saveResource("guis/sell.yml", false);
 
         YamlConfiguration cfg = YamlConfiguration.loadConfiguration(file);
-
         this.enabled = cfg.getBoolean("enabled", true);
 
         String title = cfg.getString("title", "Place your items here");
@@ -66,34 +63,17 @@ public final class SellManager implements GuiManager.CustomGuiManager {
 
         Map<String, GuiDefinition.GuiItem> items = new HashMap<>();
 
-        // Dynamic group
         List<Integer> sellSlotList = GuiDefinition.parseSlots(cfg.getStringList("sell-slots"));
         this.cachedSellSlots = sellSlotList.stream().mapToInt(Integer::intValue).toArray();
 
         items.put("sell-slots", new GuiDefinition.GuiItem(
-                "sell-slots",
-                sellSlotList,
-                Material.AIR,
-                null,
-                Collections.emptyList(),
-                false,
-                null,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
-                null,
-                null,
-                null,
-                Collections.emptyMap(),
-                Collections.emptyList(),
-                null,
-                null,
-                null
+                "sell-slots", sellSlotList, Material.AIR, null, Collections.emptyList(),
+                false, null, Collections.emptyList(), Collections.emptyList(),
+                Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
+                null, null, null, Collections.emptyMap(), Collections.emptyList(),
+                null, null, null
         ));
 
-        // Confirm button
         ConfigurationSection confirmSec = cfg.getConfigurationSection("buttons.confirm");
         if (confirmSec != null) {
             GuiDefinition.GuiItem confirmItem = GuiDefinition.GuiItem.fromSection("confirm", confirmSec, mm);
@@ -102,26 +82,20 @@ public final class SellManager implements GuiManager.CustomGuiManager {
             items.put("confirm", confirmItem);
         }
 
-        // Confirm-all button
         ConfigurationSection confirmAllSec = cfg.getConfigurationSection("buttons.confirm-all");
         if (confirmAllSec != null) {
-            GuiDefinition.GuiItem confirmAllItem = GuiDefinition.GuiItem.fromSection("confirm-all", confirmAllSec, mm);
-            items.put("confirm-all", confirmAllItem);
+            items.put("confirm-all", GuiDefinition.GuiItem.fromSection("confirm-all", confirmAllSec, mm));
         }
 
-        // Custom items
         ConfigurationSection itemsSec = cfg.getConfigurationSection("items");
         if (itemsSec != null) {
             for (String key : itemsSec.getKeys(false)) {
                 if ("confirm".equalsIgnoreCase(key) || "sell-slots".equalsIgnoreCase(key)) continue;
                 ConfigurationSection itemSec = itemsSec.getConfigurationSection(key);
                 if (itemSec == null) continue;
-
-                GuiDefinition.GuiItem guiItem = GuiDefinition.GuiItem.fromSection(key, itemSec, mm);
-                items.put(key, guiItem);
+                items.put(key, GuiDefinition.GuiItem.fromSection(key, itemSec, mm));
             }
         }
-
         this.definition = new GuiDefinition(title, rows, items, cfg);
     }
 
@@ -130,15 +104,12 @@ public final class SellManager implements GuiManager.CustomGuiManager {
         String rawTitle = PlaceholderUtil.apply(viewer, definition.title());
         rawTitle = rawTitle.replace("%player%", viewer.getName());
 
-        Inventory inv = Bukkit.createInventory(new SellHolder(viewer.getUniqueId()), definition.rows() * 9, mm.deserialize(rawTitle));
+        Inventory inv = Bukkit.createInventory(new SellHolder(), definition.rows() * 9, mm.deserialize(rawTitle));
 
-        if (!placeholders.containsKey("player")) {
-            placeholders = new HashMap<>(placeholders);
-            placeholders.put("player", viewer.getName());
-        }
+        Map<String, String> ph = new HashMap<>(placeholders);
+        ph.putIfAbsent("player", viewer.getName());
 
-        SellSlotMapper.fillCustom(plugin, inv, definition, viewer, placeholders);
-
+        SellSlotMapper.fillCustom(plugin, inv, definition, viewer, ph);
         return inv;
     }
 
@@ -148,13 +119,11 @@ public final class SellManager implements GuiManager.CustomGuiManager {
         Inventory bottom = event.getView().getBottomInventory();
         Inventory clicked = event.getClickedInventory();
 
+        if (clicked == null || event.getSlotType() == InventoryType.SlotType.OUTSIDE) return;
+
         int slot = event.getSlot();
         ItemStack current = event.getCurrentItem();
         ItemStack cursor = event.getCursor();
-
-        if (clicked == null || event.getSlotType() == InventoryType.SlotType.OUTSIDE) {
-            return;
-        }
 
         if (event.isShiftClick() && clicked == bottom) {
             if (current == null || current.getType().isAir()) {
@@ -182,154 +151,26 @@ public final class SellManager implements GuiManager.CustomGuiManager {
             return;
         }
 
-        // Confirm button behaviour
         if (inConfirm) {
             event.setCancelled(true);
-
-            SellSlotMapper.WorthResult result =
-                    SellSlotMapper.calculateWorth(top, plugin.economy().worth(), definition);
-            double total = result.total();
-
-            if (result.hasUnsupported()) {
-                MessageUtil.send(viewer, "economy.sell.error-failed", Map.of());
-                viewer.updateInventory();
-                return;
-            }
-
-            if (total <= 0) {
-                MessageUtil.send(viewer, "economy.sell.error-invalid", Map.of());
-                viewer.updateInventory();
-                return;
-            }
-
-            double rounded = plugin.economy().formats().round(total);
-            String formatted = plugin.economy().formats().formatAmount(rounded);
-
-            var econResult = plugin.economy().transactions().deposit(viewer.getUniqueId(), rounded);
-
-            if (econResult.type() == EconomyManager.ResultType.SUCCESS) {
-                MessageUtil.send(viewer, "economy.sell.success", Map.of("amount", formatted));
-
-                if (definition.getBoolean("sell-logs-on-console", true)) {
-                    plugin.getLogger().info(viewer.getName() + " sold items for " + formatted);
-                }
-
-                // Clear slots first
-                var sellSlots = definition.items().get("sell-slots").slots();
-                for (int sellSlot : sellSlots) {
-                    if (sellSlot < top.getSize()) {
-                        top.setItem(sellSlot, null);
-                    }
-                }
-
-                // Mark sale processed before actions
-                markSaleProcessed(viewer.getUniqueId());
-
-                refreshConfirmButton(top, viewer);
-                viewer.updateInventory();
-
-                if (cachedConfirmItem != null) {
-                    List<String> actionsToExecute = cachedConfirmItem.getActionsForClick(event.getClick());
-                    if (actionsToExecute != null && !actionsToExecute.isEmpty()) {
-                        Map<String, String> ph = Map.of("player", viewer.getName(), "amount", formatted);
-                        itemAction.executeAll(actionsToExecute, viewer, ph);
-                    }
-                }
-            } else {
-                MessageUtil.send(viewer, "economy.sell.error-failed", Map.of());
-                viewer.updateInventory();
-            }
+            SellSlotMapper.WorthResult result = SellSlotMapper.calculateWorth(top, plugin.economy().worth(), definition);
+            processSale(viewer, top, result, false, event.getClick());
             return;
         }
 
-        // Confirm-all button behaviour
         if (inConfirmAll) {
             event.setCancelled(true);
-
-            double total = 0;
-            boolean unsupported = false;
-
-            // Sell GUI slots
-            for (int sellSlot : definition.items().get("sell-slots").slots()) {
-                if (sellSlot >= top.getSize()) continue;
-                ItemStack item = top.getItem(sellSlot);
-                if (item == null || item.getType().isAir()) continue;
-                double price = plugin.economy().worth().getWorth(item);
-                if (price <= 0) { unsupported = true; continue; }
-                total += price * item.getAmount();
-            }
-
-            // Player inventory slots
-            for (int i = 0; i < 36; i++) {
-                ItemStack item = viewer.getInventory().getItem(i);
-                if (item == null || item.getType().isAir()) continue;
-                double price = plugin.economy().worth().getWorth(item);
-                if (price <= 0) { unsupported = true; continue; }
-                total += price * item.getAmount();
-            }
-
-            if (unsupported) {
-                MessageUtil.send(viewer, "economy.sell.error-failed", Map.of());
-                return;
-            }
-            if (total <= 0) {
-                MessageUtil.send(viewer, "economy.sell.error-invalid", Map.of());
-                return;
-            }
-
-            double rounded = plugin.economy().formats().round(total);
-            String formatted = plugin.economy().formats().formatAmount(rounded);
-
-            var econResult = plugin.economy().transactions().deposit(viewer.getUniqueId(), rounded);
-            if (econResult.type() == EconomyManager.ResultType.SUCCESS) {
-                MessageUtil.send(viewer, "economy.sell.success", Map.of("amount", formatted));
-
-                if (definition.getBoolean("sell-logs-on-console", true)) {
-                    plugin.getLogger().info(viewer.getName() + " sold ALL items for " + formatted);
-                }
-
-                // Clear sell GUI slots
-                for (int sellSlot : definition.items().get("sell-slots").slots()) {
-                    if (sellSlot < top.getSize()) {
-                        top.setItem(sellSlot, null);
-                    }
-                }
-
-                // Clear player inventory
-                for (int i = 0; i < 36; i++) {
-                    viewer.getInventory().setItem(i, null);
-                }
-
-                // Mark sale processed before actions
-                markSaleProcessed(viewer.getUniqueId());
-
-                refreshConfirmButton(top, viewer);
-                viewer.updateInventory();
-
-                GuiDefinition.GuiItem confirmAllItem = definition.items().get("confirm-all");
-                if (confirmAllItem != null) {
-                    List<String> actionsToExecute = confirmAllItem.getActionsForClick(event.getClick());
-                    if (actionsToExecute != null && !actionsToExecute.isEmpty()) {
-                        Map<String, String> ph = Map.of("player", viewer.getName(), "amount", formatted);
-                        itemAction.executeAll(actionsToExecute, viewer, ph);
-                    }
-                }
-            } else {
-                MessageUtil.send(viewer, "economy.sell.error-failed", Map.of());
-            }
+            SellSlotMapper.WorthResult result = SellSlotMapper.calculateWorthAll(top, plugin.economy().worth(), definition, viewer);
+            processSale(viewer, top, result, true, event.getClick());
             return;
         }
 
-        // Dynamic slot behaviour
         if (dynamic) {
             if (isFillerHere && cursor.getType().isAir()) {
                 event.setCancelled(true);
                 GuiDefinition.GuiItem custom = findCustomItemAt(slot);
                 if (custom != null) {
-                    List<String> actionsToExecute = custom.getActionsForClick(event.getClick());
-                    if (actionsToExecute != null && !actionsToExecute.isEmpty()) {
-                        itemAction.executeAll(actionsToExecute, viewer, Map.of("player", viewer.getName()));
-                    }
+                    executeItemActions(custom, viewer, event.getClick(), Collections.emptyMap());
                 }
                 return;
             }
@@ -343,40 +184,104 @@ public final class SellManager implements GuiManager.CustomGuiManager {
             }
 
             event.setCancelled(false);
-            plugin.scheduler().runEntityTaskDelayed(viewer,
-                    () -> refreshConfirmButton(top, viewer),
-                    1L
-            );
+            plugin.scheduler().runEntityTaskDelayed(viewer, () -> refreshConfirmButton(top, viewer), 1L);
             return;
         }
 
-        // Static/custom item slots
         event.setCancelled(true);
+        executeItemActions(registeredItem, viewer, event.getClick(), Collections.emptyMap());
+    }
 
-        List<String> actionsToExecute = registeredItem.getActionsForClick(event.getClick());
-        if (actionsToExecute != null && !actionsToExecute.isEmpty()) {
-            itemAction.executeAll(actionsToExecute, viewer, Map.of("player", viewer.getName()));
+    private void processSale(Player viewer, Inventory top, SellSlotMapper.WorthResult result, boolean isAll, ClickType click) {
+        if (result.hasUnsupported()) {
+            MessageUtil.send(viewer, "economy.sell.error-failed", Map.of());
+            viewer.updateInventory();
+            return;
+        }
+
+        double total = result.total();
+        if (total <= 0) {
+            MessageUtil.send(viewer, "economy.sell.error-invalid", Map.of());
+            viewer.updateInventory();
+            return;
+        }
+
+        double rounded = plugin.economy().formats().round(total);
+        String formatted = plugin.economy().formats().formatAmount(rounded);
+
+        if (plugin.economy().transactions().deposit(viewer.getUniqueId(), rounded).type() == EconomyManager.ResultType.SUCCESS) {
+            MessageUtil.send(viewer, "economy.sell.success", Map.of("amount", formatted));
+
+            clearSellSlots(top);
+            if (isAll) clearPlayerInv(viewer);
+
+            markSaleProcessed(viewer.getUniqueId());
+            refreshConfirmButton(top, viewer);
+            viewer.updateInventory();
+
+            GuiDefinition.GuiItem targetItem = isAll ? definition.items().get("confirm-all") : cachedConfirmItem;
+            if (targetItem != null) {
+                executeItemActions(targetItem, viewer, click, Map.of("amount", formatted));
+            }
+        } else {
+            MessageUtil.send(viewer, "economy.sell.error-failed", Map.of());
+        }
+    }
+
+    private void clearSellSlots(Inventory top) {
+        for (int slot : cachedSellSlots) if (slot < top.getSize()) top.setItem(slot, null);
+    }
+
+    private void clearPlayerInv(Player viewer) {
+        for (int i = 0; i < 36; i++) viewer.getInventory().setItem(i, null);
+    }
+
+    private void executeItemActions(GuiDefinition.GuiItem item, Player viewer, ClickType click, Map<String, String> extraPh) {
+        List<String> actions = item.getActionsForClick(click);
+        if (actions != null && !actions.isEmpty()) {
+            Map<String, String> ph = new HashMap<>(extraPh);
+            ph.put("player", viewer.getName());
+            itemAction.executeAll(actions, viewer, ph);
+        }
+    }
+
+    public void refreshConfirmButton(Inventory inv, Player viewer) {
+        if (cachedConfirmItem == null || !(inv.getHolder() instanceof SellHolder holder)) return;
+
+        var worthService = plugin.economy().worth();
+        double guiWorth = SellSlotMapper.calculateWorth(inv, worthService, definition).total();
+        double totalAll = SellSlotMapper.calculateWorthAll(inv, worthService, definition, viewer).total();
+
+        double currentState = guiWorth + totalAll;
+        if (holder.lastWorth == currentState) return;
+        holder.lastWorth = currentState;
+
+        SellSlotMapper.updateConfirmButton(definition, cachedConfirmItem, inv, viewer, guiWorth, totalAll, Map.of("player", viewer.getName()), plugin.economy().formats());
+
+        GuiDefinition.GuiItem confirmAll = definition.items().get("confirm-all");
+        if (confirmAll != null) {
+            SellSlotMapper.updateConfirmButton(definition, confirmAll, inv, viewer, totalAll, totalAll, Map.of("player", viewer.getName()), plugin.economy().formats());
         }
     }
 
     private void distributeToSlots(Inventory top, ItemStack moving, Inventory sourceInv, int sourceSlot) {
         if (moving == null || moving.getType().isAir()) return;
 
-        // Merge into partial stacks first
         for (int dest : cachedSellSlots) {
             ItemStack destItem = top.getItem(dest);
-            if (destItem != null && destItem.isSimilar(moving) && destItem.getAmount() < destItem.getMaxStackSize()) {
+            if (destItem != null && !destItem.getType().isAir() && destItem.isSimilar(moving)) {
                 int transfer = Math.min(moving.getAmount(), destItem.getMaxStackSize() - destItem.getAmount());
-                destItem.setAmount(destItem.getAmount() + transfer);
-                moving.setAmount(moving.getAmount() - transfer);
-                if (moving.getAmount() <= 0) {
-                    sourceInv.setItem(sourceSlot, null);
-                    return;
+                if (transfer > 0) {
+                    destItem.setAmount(destItem.getAmount() + transfer);
+                    moving.setAmount(moving.getAmount() - transfer);
+                    if (moving.getAmount() <= 0) {
+                        sourceInv.setItem(sourceSlot, null);
+                        return;
+                    }
                 }
             }
         }
 
-        // Then fill empty slots
         for (int dest : cachedSellSlots) {
             ItemStack destItem = top.getItem(dest);
             if (destItem == null || destItem.getType().isAir()) {
@@ -387,91 +292,33 @@ public final class SellManager implements GuiManager.CustomGuiManager {
         }
     }
 
-    private boolean isDynamicSlot(int slot) {
-        for (int s : cachedSellSlots) {
-            if (s == slot) return true;
-        }
-        return false;
-    }
-
-    private boolean isInConfirmSlots(int slot) {
-        if (cachedConfirmSlots == null) return false;
-        for (int s : cachedConfirmSlots) {
-            if (s == slot) return true;
-        }
-        return false;
-    }
-
-    private boolean isCustomFillerAt(int slot, @Nullable ItemStack current) {
-        return SellSlotMapper.isCustomFillerAt(definition, slot, current);
-    }
-
-    @Nullable
-    private GuiDefinition.GuiItem findItem(int slot) {
-        return SellSlotMapper.findItem(definition, slot);
-    }
-
-    @Nullable
-    private GuiDefinition.GuiItem findCustomItemAt(int slot) {
-        return SellSlotMapper.findCustomItemAt(definition, slot);
-    }
-
-    private void refreshConfirmButton(Inventory inv, Player viewer) {
-        if (cachedConfirmItem == null) return;
-
-        SellSlotMapper.WorthResult result =
-                SellSlotMapper.calculateWorth(inv, plugin.economy().worth(), definition);
-
-        double total = result.total();
-
-        SellSlotMapper.updateConfirmButton(
-                cachedConfirmItem,
-                inv,
-                viewer,
-                total,
-                Map.of("player", viewer.getName()),
-                plugin.economy().formats()
-        );
-    }
+    private boolean isDynamicSlot(int slot) { for (int s : cachedSellSlots) if (s == slot) return true; return false; }
+    private boolean isInConfirmSlots(int slot) { if (cachedConfirmSlots == null) return false; for (int s : cachedConfirmSlots) if (s == slot) return true; return false; }
+    private boolean isCustomFillerAt(int slot, @Nullable ItemStack current) { return SellSlotMapper.isCustomFillerAt(definition, slot, current); }
+    private GuiDefinition.GuiItem findItem(int slot) { return SellSlotMapper.findItem(definition, slot); }
+    private GuiDefinition.GuiItem findCustomItemAt(int slot) { return SellSlotMapper.findCustomItemAt(definition, slot); }
 
     public void executeConfirmActions(Player viewer, String amountFormatted) {
-        if (cachedConfirmItem == null) return;
-
-        // Use ClickType.LEFT as the standard "confirm" click for placeholder/action resolution
-        List<String> actionsToExecute = cachedConfirmItem.getActionsForClick(ClickType.LEFT);
-        if (actionsToExecute == null || actionsToExecute.isEmpty()) return;
-
-        Map<String, String> actionPlaceholders = new HashMap<>();
-        actionPlaceholders.put("player", viewer.getName());
-        actionPlaceholders.put("amount", amountFormatted);
-
-        itemAction.executeAll(actionsToExecute, viewer, actionPlaceholders);
+        if (cachedConfirmItem != null) executeItemActions(cachedConfirmItem, viewer, ClickType.LEFT, Map.of("amount", amountFormatted));
     }
 
     public void markSaleProcessed(UUID player) {
         processedSales.add(player);
-        plugin.scheduler().runDelayed(
-                () -> processedSales.remove(player),
-                20L
-        );
+        plugin.scheduler().runDelayed(() -> processedSales.remove(player), 20L);
     }
 
-    public boolean consumeProcessedSale(UUID player) {
-        return processedSales.remove(player);
-    }
-
-    public void unregisterListeners() {
-        HandlerList.unregisterAll(this.listener);
-    }
-
-    @Override
-    public boolean owns(Inventory inv) {
-        return inv.getHolder() instanceof SellHolder;
-    }
-
+    public boolean consumeProcessedSale(UUID player) { return processedSales.remove(player); }
+    public void unregisterListeners() { HandlerList.unregisterAll(this.listener); }
+    @Override public boolean owns(Inventory inv) { return inv.getHolder() instanceof SellHolder; }
     public GuiDefinition definition() { return definition; }
 
-    public record SellHolder(UUID owner) implements InventoryHolder {
-        @Override public @NotNull Inventory getInventory() { throw new UnsupportedOperationException(); }
+    public static class SellHolder implements InventoryHolder {
+        public double lastWorth = -1.0;
+        private Inventory inventory;
+        public void setInventory(Inventory inventory) { this.inventory = inventory; }
+        @Override
+        public @NotNull Inventory getInventory() {
+            return inventory;
+        }
     }
 }
